--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,38 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
+
+# Prisma migrations (puedes versionarlas si quieres compartir el esquema con el equipo)
+# Si prefieres ignorarlas, descomenta la siguiente línea:
+# /prisma/migrations/
+
+# SQLite (si en algún momento lo usas para pruebas locales)
+*.db
+*.db-journal
+
+# Coverage reports
+coverage/
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Typescript incremental build files
+*.tsbuildinfo
+
+# Cache
+.next/
+out/
+dist/
