--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.15.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "csv-stringify": "^6.6.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "next-swagger-doc": "^0.4.1",
@@ -22,22 +32,27 @@
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
     "shadcn-ui": "^0.9.5",
-    "swagger-ui-react": "^5.28.1"
+    "swagger-ui-react": "^5.28.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.10",
     "tailwindcss": "^4.1.13",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
