--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,20 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["next-auth"]
+    "types": ["next-auth", "jest", "node", "@testing-library/jest-dom"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", 
+    "**/*.tsx",
+    "**/__tests__/**/*",
+    "**/*.test.*",
+    "**/*.spec.*"
+  ],
   "exclude": ["node_modules"]
 }
